alignment fix

--- a/css/style_k.css
+++ b/css/style_k.css
@@ -136,14 +136,7 @@ background-size:cover;
 
 
 
-.responsive {
-  width: 100%;
-  height: auto;
-  margin-bottom:20px;
-  margin-top:20px;
-  margin-right:20px;
-  margin-left:20px;
-}
+
 
 
 
